signup page added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <li><input type="password" name="Password" placeholder="********"></li>
                 <li><input type="button" name="Submit" value="Submit"></li>
                 <li>Forget Password?</li>
+                <li><a href="/home/harshit/Desktop/webChat/Pages/signUp.html"> New User? Sign Up</a></li>
             </ul>
 
         </div>
