Added Sign Up page

--- a/SignUp.html
+++ b/SignUp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Login Form</title>
+        <title>Sign Up Form</title>
         <link rel="stylesheet" type="text/css" href="CSS/global.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css" integrity="sha384-i1LQnF23gykqWXg6jxC2ZbCbUMxyw5gLZY6UiUS98LYV5unm8GWmfkIS6jqJfb4E" crossorigin="anonymous">
 
@@ -9,11 +9,11 @@
     <body>
 
         <div class="container">
-            <div class="wrap">
+            <div class="wrap-1">
                 <div class="login">
                     <form class="login-form">
                         <span class="span-1">
-                            Member Login
+                            Sign Up
                         </span>
     
                         <div class="input">
@@ -34,14 +34,13 @@
                         
                         <div class="wrap-form-btn">
                             <button class="login-form-btn">
-                                Login
+                                Sign Up
                             </button>
                         </div>
 
                         <div class="text-center">
-                            <a class="txt3" href="SignUp.html">
-                                Create your Account
-                                <i class="fas fa-long-arrow-alt-right" aria-hidden="true"></i>
+                            <a class="txt2" href="index.html">
+                                Login
                             </a>
                         </div>
                     </form>
