--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         </div>
                         
                         <div class="wrap-form-btn">
-                            <button class="login-form-btn">
+                            <button class="login-form-btn")>
                                 Login
                             </button>
                         </div>
@@ -57,6 +57,6 @@
                 </div>
             </div>
         </div>
-
+        
     </body>
 </html>
