CSS changes to Chat Window

--- a/chatWindow.html
+++ b/chatWindow.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>chatWindow</title>
-        <link rel="stylesheet" type="text/css" href="/home/harshit/Desktop/webChat/CSS/chatWindow.css" />
+        <title>Chat Window</title>
+        <link rel="stylesheet" type="text/css" href="CSS/chatWindow.css" />
     </head>
 
     <body>
-        <input type="text" id="searchBar" placeholder="search users">
+        <input type="text" id="searchBar" placeholder="Search Users">
         <div id="chatMessage">
             
         </div>
