Minor changes to Chat Window

--- a/chatWindow.html
+++ b/chatWindow.html
@@ -12,8 +12,9 @@
         </div>
         <div>
             <input type="text" name="message" placeholder="Write your message here" id="message">
-
             <button id="sendButton">Send</button>
         </div>
+        <script type="text/javascript" src="Chat.js"></script>
+        <script src=https://cdn.pubnub.com/sdk/javascript/pubnub.4.0.11.min.js></script>
     </body>
 </html>
